use shift key to add and fix firefox tooltip display

--- a/content.css
+++ b/content.css
@@ -9,6 +9,8 @@
 }
 
 .web-md-flash {
+  all: initial;
+  display: block;
   position: fixed;
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
